[package]
name          = "brainfuck_rs"
version       = "0.3.1"
authors       = ["Marc-Antoine Perennou <Marc-Antoine@Perennou.com>"]
description   = "brainfuck parser using nom"
repository    = "https://github.com/Keruspe/brainfuck.rs"
documentation = "https://docs.rs/brainfuck_rs/" 
readme        = "README.md"
keywords      = ["brainfuck","parser","nom"]
license       = "MIT"

[lib]
name = "brainfuck"

[dependencies]
clap = "^2.20.0"
nom  = "^2.0.1"

[badges]
travis-ci = { repository = "Keruspe/brainfuck.rs" }
