[package]
name          = "brainfuck_rs"
version       = "2.0.0"
edition       = "2018"
authors       = ["Marc-Antoine Perennou <Marc-Antoine@Perennou.com>"]
description   = "Brainfuck parser and interpreter using nom"
repository    = "https://github.com/Keruspe/brainfuck.rs"
documentation = "https://docs.rs/brainfuck_rs/" 
readme        = "README.md"
keywords      = ["brainfuck","parser","interpreter","nom"]
categories    = ["command-line-utilities","parser-implementations"]
license       = "MIT"

[lib]
name = "brainfuck"

[dependencies]
clap = "^2"
nom  = "^6.2"

[badges]
travis-ci = { repository = "Keruspe/brainfuck.rs" }
